fixed collapsing issue on mobilke on quick links

--- a/css/index.css
+++ b/css/index.css
@@ -415,7 +415,7 @@ accordion-dropdown h5 i {
   border-bottom-right-radius:0px;
 }
 
-#variablesAndInfo {
+#variablesAndInfo, #quickLinksList {
   margin-bottom: 50px;
 }
 
